--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UNIBEN Post-UME Quiz</title>
+    <title>JUPEB ENTRANCE EXAM PREP QUIZ</title>
     <script src="https://cdn.tailwindcss.com"></script>
   <script type="importmap">
 {
